# javelin-waybar

./: LICENSE  Makefile  dune-project  javelin-waybar.opam
lib/: dune  event.ml  event.mli  hid.ml  hid.mli  history.ml  history.mli  javelin_waybar.ml  javelin_waybar.mli  report.ml  report.mli  waybar.ml  waybar.mli
test/: dune  test.ml  test_event.ml  test_helpers.ml  test_hid.ml  test_history.ml  test_report.ml  test_waybar.ml
